# aoc2025

./: .gitignore  README.md  pyproject.toml
src/aoc2025/: all.py
src/aoc2025/days/: day01.py
src/aoc2025/utils/: input_util.py
tests/: test_day01.py  test_example.py
